# pygmm

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .python-version  .travis.yml  HISTORY.md  HISTORY.rst  README.md  README.rst  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tasks.py  tox.ini  travis_pypi_setup.py
.github/workflows/: autoblack_pull_request.yml  black.yml  python-app.yml  python-publish.yml  ruff.yml  updater.yaml
docs/: Makefile  conf.py  index.rst  installation.rst  models.rst  references.bib  usage.rst  zreferences.rst
docs/_templates/autosummary/: class.rst
examples/: abrahamson_silva_1996.ipynb  example-1.py  example-ba18.py  example-ba19.py
pygmm/: __init__.py  abrahamson_gregor_addo_2016.py  abrahamson_silva_kamai_2014.py  afshari_stewart_2016.py  akkar_sandikkaya_bommer_2014.py  atkinson_boore_2006.py  baker_jayaram_2008.py  bayless_abrahamson_2018.py  bayless_abrahamson_2019.py  boore_stewart_seyhan_atkinson_2014.py  campbell_2003.py  campbell_bozorgnia_2014.py  chiou_youngs_2014.py  derras_bard_cotton_2013.py  derras_bard_cotton_2014.py  gulerce_abrahamson_2011.py  hermkes_kuehn_riggelsen_2014.py  idriss_2014.py  kempton_stewart_2006.py  kishida_2017.py  model.py  pezeshk_zandieh_tavakoli_2011.py  tavakoli_pezeshk_2005.py  tools.py  types.py
pygmm/data/: abrahamson_silva_kamai_2014.csv  akkar-sandikkaya-bommer-2014-dist_epi.csv  akkar-sandikkaya-bommer-2014-dist_hyp.csv  akkar-sandikkaya-bommer-2014-dist_jb.csv  atkinson_boore_2006-bc.csv  atkinson_boore_2006-rock.csv  boore_stewart_seyhan_atkinson-2014.csv  campbell_2003.csv  campbell_bozorgnia_2014.csv  hermkes_kuehn_riggelsen_2014.npz  idriss_2014-large.csv  idriss_2014-small.csv  pezeshk_zandieh_tavakoli_2011.csv  tavakoli_pezeshk_2005.csv
src/pygmm/: __init__.py  _version.py  abrahamson_bhasin_2020.py  abrahamson_gregor_addo_2016.py  abrahamson_silva_1996.py  abrahamson_silva_kamai_2014.py  afshari_stewart_2016.py  akkar_sandikkaya_bommer_2014.py  bayless_abrahamson_2018.py  bayless_abrahamson_2019.py  boore_stewart_seyhan_atkinson_2014.py  campbell_2003.py  campbell_bozorgnia_2014.py  chiou_youngs_2014.py  coppersmith_bommer_2014.py  derras_bard_cotton_2014.py  gulerce_abrahamson_2011.py  hermkes_kuehn_riggelsen_2014.py  idriss_2014.py  kempton_stewart_2006.py  kishida_2017.py  model.py  pinilla_ramos_et_al_2023.py  pinilla_ramos_et_al_2024.py  stafford_2017.py  tavakoli_pezeshk_2005.py
src/pygmm/data/: hermkes_kuehn_riggelsen_2014.npz
tests/: run_nga_west2_tests.py  test_abrahamson_gregor_addo_2016.py  test_abrahamson_silva_1996.py  test_abrahamson_silva_kamai_2014.py  test_akkar_sandikkaya_bommer_2014.py  test_baker_jayaram_2008.py  test_bayless_abrahamson_2019.py  test_campbell_2003.py  test_campbell_bozorgnia_2014.py  test_chiou_youngs_2014.py  test_coppersmith_bommer_2014.py  test_create_plots.py  test_derras_bard_cotton_2013.py  test_derras_bard_cotton_2014.py  test_gulerce_abrahamson_2011.py  test_hermkes_kuehn_riggelsen_2013.py  test_kishida_2017.py  test_model.py  test_nga_west2_models.py  test_parameter.py  test_pinilla_ramos_et_al_2023.py  test_pinilla_ramos_et_al_2024.py  test_pygmm.py  test_stafford_2017.py
tests/data/: as96_ref.wks  baker_jayaram_2008-figure_4.dig  baker_jayaram_2008.json  gulerce_abrahamson_2011.json  kishida_2017.json
utils/: create_DBC13_test_cases.py  create_asb14_test_cases.py  create_nga_west2_test_cases.py
