[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pyGMM"
dynamic = ["version"]
authors = [{ name = "Albert Kottke", email = "albert.kottke@gmail.com" }]
description="Ground motion models implemented in Python."
readme = "README.md"
license = "MIT"
requires-python = ">=3.7"
dependencies = [
"matplotlib",
  "numpy",
  "scipy",
]

[project.urls]
Homepage = "https://github.com/arkottke/pygmm"
Documentation = "https://pygmm.readthedocs.io"

[tool.black]
line-length = 99
target-version = ['py37', 'py38', 'py39', 'py310', 'py311', 'py312']

[tool.hatch.build.targets.sdist]
exclude = ["/*.yml", "/.*", "/.github", "/docs"]

[tool.hatch.build.targets.wheel]
packages = ["src/pygmm"]

[tool.isort]
profile = "black"
filter_files = true

[tool.hatch.version]
source = "vcs"

[tool.hatch.envs.test]
dependencies = [
  "coverage[toml]",
  "pytest",
  "pytest-cov",
  "pytest-runner",
  "pytest-flake8",
]

[tool.hatch.envs.test.scripts]
run-coverage = "pytest --cov-config=pyproject.toml --cov=pkg --cov=tests"
run-coverage-xml = "run-coverage --cov-report xml"
run = "run-coverage --no-cov"

[tool.hatch.envs.style]
detached = true
dependencies = ["ruff"]

[tool.hatch.envs.style.scripts]
check = ["ruff check --diff"]
fmt = ["ruff check --fix", "check"]

[tool.hatch.envs.docs]
dependencies = [
    "jinja2",
    "sphinx",
    "sphinx_rtd_theme",
    "sphinxcontrib-bibtex",
]
[tool.hatch.envs.docs.scripts]
build = "mkdocs build --clean --strict"
serve = "mkdocs serve --dev-addr localhost:8000"

[tool.pydocstyle]
inherit = false
convention = "numpy"
match = "(?!test_).*\\.py"

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint]
select = ["I"]

ignore = []

[tool.setuptools_scm]
