[aliases]
test = pytest
release = clean --all sdist bdist_whell build_sphinx upload upload_docs

[metadata]
description-file = README.rst

[wheel]
universal = 1

[yapf]
based_on_style = pep8
spaces_around_power_operator = true

[tool:pytest]
addopts = --flake8 --cov-report term --cov=pyrotd tests.py
